[package]
name = "ssh2-rsl"
version = "0.1.0"
authors = ["XS <tonycody@qq.com>"]
license = "Apache-2.0"
keywords = ["ssh"]
readme = "README.md"
repository = "https://github.com/xs-fork/ssh2-rs"
homepage = "https://github.com/xs-fork/ssh2-rs"
documentation = "https://docs.rs/ssh2-rsl"
description = """
Bindings to libssh2 for interacting with SSH servers and executing remote
commands, forwarding local ports, etc.
"""

[features]
vendored-openssl = ["libssh2-sys/vendored-openssl"]
openssl-on-win32 = ["libssh2-sys/openssl-on-win32"]

[dependencies]
bitflags = "1.2"
libc = "0.2"
libssh2-sys = { path = "libssh2-sys", version = "0.3.0" }
parking_lot = "0.12"

[dev-dependencies]
tempfile = "3"

[workspace]
members = ['systest']
